RESOLVED FIXED293118
Fix assertion in SWServer::clientIsAppInitiatedForRegistrableDomain
https://bugs.webkit.org/show_bug.cgi?id=293118
Summary Fix assertion in SWServer::clientIsAppInitiatedForRegistrableDomain
Alex Christensen
Reported 2025-05-16 07:53:34 PDT
...
Attachments
Alex Christensen
Comment 1 2025-05-16 07:55:53 PDT
Radar WebKit Bug Importer
Comment 2 2025-05-16 08:00:44 PDT
EWS
Comment 3 2025-05-16 08:42:40 PDT
Committed 295007@main (9493f7bc040e): <https://commits.webkit.org/295007@main> Reviewed commits have been landed. Closing PR #45487 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.