Fix assertion in SWServer::clientIsAppInitiatedForRegistrableDomain https://bugs.webkit.org/show_bug.cgi?id=293118

Reviewed by David Kilzer.

I hit this assertion when running TestWebKitAPI.ServiceWorker.ServiceWorkerProcessSwapWithNoDelay
with site isolation enabled.  It should be hardened.

* Source/WebCore/workers/service/server/SWServer.cpp:
(WebCore::SWServer::clientIsAppInitiatedForRegistrableDomain):

Canonical link: https://commits.webkit.org/295007@main